Fix overflow preview, export to enebular

--- a/public/enebular-nodered.css
+++ b/public/enebular-nodered.css
@@ -49,6 +49,7 @@
   border: 1px solid #ccc;
   border-radius: 3px;
   display: none;
+  overflow: scroll;
 }
 .enebular-node-preview.is-open{
   display: block;
